The "it does something" commit. I just talked the very first time to the inverter... (and finding out, that the inverter cannot handle reponses longer than 255 bytes..) So new approach: Estimate the answer length and use that for how much commands to put in...)

--- a/README
+++ b/README
@@ -4,5 +4,8 @@ README
 Solarpowerlog is currently in planning / construction phase.
 
 Some of the basic design is "designed" but basically, the code does currently
-*nothing*
+*nothing*, even if it already could do....
 
+Stay tuned!
+
+ 
