--- a/ChangeLog
+++ b/ChangeLog
@@ -4,8 +4,9 @@ solarpowerlog (trunk)
   *  avoiding dependency from boost::asio to boost::regex 
   *  new depedency on boost::progamm_options, used to parse program options
      (parameters given on commmand line. Checkout solarpowerlog --help
+  *  applied config.h inclusioun to all files.
 
- -- Tobias Frost <tobi@coldtobi.de>  Mon Jun 15 22:29:35 CEST 2009
+ -- Tobias Frost <tobi@coldtobi.de>  
 
 solarpowerlog (0.01) unstable; urgency=low
 
