--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+solarpowerlog (trunk)
+
+  *  autotools: boost detection was broken 
+  *  avoiding dependency from boost::asio to boost::regex 
+  *  new depedency on boost::progamm_options, used to parse program options
+     (parameters given on commmand line. Checkout solarpowerlog --help
+  *  applied config.h inclusioun to all files.
+
+ -- Tobias Frost <tobi@coldtobi.de>  
+
 solarpowerlog (0.01) unstable; urgency=low
 
   * The first release!
