--- a/ChangeLog
+++ b/ChangeLog
@@ -4,9 +4,14 @@ solarpowerlog (trunk)
   *  avoiding dependency from boost::asio to boost::regex 
   *  new depedency on boost::progamm_options, used to parse program options
      (parameters given on commmand line. Checkout solarpowerlog --help
-  *  applied config.h inclusioun to all files.
+  *  applied config.h inclusion to all files.
+  *  Added some files for which autotools are needed to reconstruct.
+     This is, as I had problems recreating them under cygwin.
+  *  ported to Win32. (Builds at least under XP and cygwin. ) 
+     (Closes BT-0000001)
+  *  CTimedWork: Fixed a bug that only showed on Win32. 
 
- -- Tobias Frost <tobi@coldtobi.de>  
+ -- Tobias Frost <tobi@coldtobi.de> 
 
 solarpowerlog (0.01) unstable; urgency=low
 
