--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,28 @@
-solarpowerlog (0.01-1) unstable; urgency=low
+solarpowerlog (0.10) unstable; urgency=low
 
-  * Initial release, packed up for debian 
+  * New Feature: CVSOutputFilter -- writes data to a CVS file
+  * New Feature: Config-File can be specified with command line option. 
+  * Many Fixes / Enhancements:
+  * autotools: boost detection was broken 
+  * avoiding dependency from boost::asio to boost::regex 
+  * new depedency on boost::progamm_options, used to parse program options
+    (parameters given on commmand line. Checkout solarpowerlog --help
+  * applied config.h inclusion to all files.
+  * Added some files for which autotools are needed to reconstruct.
+    This is, as I had problems recreating them under cygwin.
+  * ported to Win32. (Builds at least under XP and cygwin. ) 
+    (Closes BT-0000001)
+  * CTimedWork: Fixed a bug that only showed on Win32.
+  * Add CConfigHelper for easier Config-Handling.
+  * Lots of documentation added 
+  * Fixes a bug ("debug leftover") in the TCP (ASIO) class.
+  * Another bug in the tokenizer -- strangly did not show under eclipse,
+    but under "make" made executeables... 
 
- -- Tobias Frost <tobi@coldtobi.de>  Tue, 16 Jun 2009 21:07:45 +0200
+ -- Tobias Frost <tobi@coldtobi.de>  Wed Jul 15 22:53:04 CEST 2009
+
+solarpowerlog (0.01) unstable; urgency=low
+
+  * The first release!
+
+ -- Tobias Frost <tobi@coldtobi.de>  Mon Jun 15 22:29:35 CEST 2009
