--- a/extlibs/README
+++ b/extlibs/README
@@ -1,7 +1,7 @@
 In this folder, external code is placed which is used by solarpowerlog but 
 which is not available through debian packages:
 
-Please check the projects informations for details about copyright, license and
+Please check the projects information for details about copyright, license and
 authors -- the packages are provided "as is".
 
 Folder		License Origin  		
