[debian files] Updated some files, specifing dependencies

--- a/debian/solarpowerlog.1
+++ b/debian/solarpowerlog.1
@@ -14,7 +14,7 @@
 .\" .br        insert line break
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
-.TH "SOLARPOWERLOG" "SECTION" "June 16, 2009" "" ""
+.TH "SOLARPOWERLOG" "1" "June 16, 2009" "" ""
 .SH "NAME"
 solarpowerlog \- queries data from a photovoltaic inverter
 .SH "SYNOPSIS"
