--- a/ChangeLog
+++ b/ChangeLog
@@ -1,22 +1,38 @@
+solarpowerlog (0.21-1) unstable; urgency=lowa
+
+  * Worked on the debian integration, package now build fine using
+    pbuilder, is linitian warning free and hopefully will find a 
+    heartly welcome on debian so ITP can be closed. (Closes #652904)
+  * New feature since 0.20
+     - can be run as a dameon 
+     - serial communication is now implemented (like RS232, RS485)
+     - shared communication (like daisy-chain communication)
+       is implemented, howevers still "beta" state as it could use 
+       more testing. Therefore this is not yet enabled
+       by default (compiletime, set by ./configure option)
+  * Bugfixes like a memory leak or some not caught exceptions
+ 
+ Tobias Frost <tobi@coldtobi.de>  Wed, 21 Dec 2011 18:27:42 +0100
+
 solarpowerlog (0.20) unstable; urgency=low
 
    * [CSV Dumper] 
-	- can (as confiureable) now have a ISO 8601 timestamp (closing #2).
-	  Defaults to ISO 8601, "yyyy-mm-dd hh:mm:ss" 
-	- the files will be now more compact, as we are not writing spaces
-	  before and after the seperator
-	- optionally, it will write "compacter" file, writing only if any data
-	  actually changed. 
-	- also, if used as only CSV Logging, I/Os can be reduced by disabling
-	  "flusing" after every write. (default is "off", as the previous 
-	  behaviour.
-	- Preparing for plugins that make use of the CSV: Adding capabilites
-	  what is logged and where the file is located. 
-	- Removed some checks from unused configuration parameters
-	- Rotate was not checked in CheckConfig()
-	- Added two capabilites, one telling the filename, the other telling what
-	  we are currently logging (preparing for visualization)
-	- A little more RFC-something conform -- also in the header
+    - can (as confiureable) now have a ISO 8601 timestamp (closing #2).
+      Defaults to ISO 8601, "yyyy-mm-dd hh:mm:ss" 
+    - the files will be now more compact, as we are not writing spaces
+      before and after the seperator
+    - optionally, it will write "compacter" file, writing only if any data
+      actually changed. 
+    - also, if used as only CSV Logging, I/Os can be reduced by disabling
+      "flusing" after every write. (default is "off", as the previous 
+      behaviour.
+    - Preparing for plugins that make use of the CSV: Adding capabilites
+      what is logged and where the file is located. 
+    - Removed some checks from unused configuration parameters
+    - Rotate was not checked in CheckConfig()
+    - Added two capabilites, one telling the filename, the other telling what
+      we are currently logging (preparing for visualization)
+    - A little more RFC-something conform -- also in the header
    * [HTMLWRITER]
     - A new data filter. This is the reason why we release 0.20
       This filter can write out HTML pages which show nice visualizations.
@@ -27,6 +43,7 @@ solarpowerlog (0.20) unstable; urgency=low
     - Modified this library to emit smaller pages. 
     
  -- Tobias Frost <tobi@coldtobi.de>  Wed, 06 Jan 2010 20:50:35 +0200
+
 
 solarpowerlog (0.12) unstable; urgency=low
 
@@ -51,7 +68,7 @@ solarpowerlog (0.12) unstable; urgency=low
 solarpowerlog (0.11-unreleased) unstable; urgency=low
 
   * Sputniks' error recovery did not work sometimes 
-  * Components of the program can now be selectivly choosen at compile time
+  * Components of the programm can now be selectivly choosen at compile time
     to reduce the amount of required external libraries and memory footprint.
   * Solved a bug with the logging levels.
 
