--- a/debian/solarpowerlog.1
+++ b/debian/solarpowerlog.1
@@ -39,7 +39,7 @@ Show summary of options.
 Show version of program.
 .TP 
 .B \-b, \-\-background
-Runs the programm in the background, detaching it from the console.
+Runs the program in the background, detaching it from the console.
 .TP 
 .B \-c, \-\-conf filename
 The configuration to be used. Default is solarpowerlog.conf, looked for in the current directory. 
