--- a/README
+++ b/README
@@ -11,6 +11,16 @@ energy generation systems.
 
 Solarpowerlog, even if already doing something, is still under heavy development
 
+
+GETTING SUPPORT
+===============
+
+For some online documentation please see: 
+http://sourceforge.net/apps/mediawiki/solarpowerlog/index.php
+
+Please also consider posting to the mailing lists if you need help:
+http://sourceforge.net/mail/?group_id=259217
+
 HELP WANTED
 ===========
 
