[CVSWriter] removed warnings, documentation update, defaulting not to flush
- removed warning that docs are not up to date
- updated this documentation which was not uptodate
- changing the default behaviour to not call flush
- some whitespace, doxygen changes

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,5 @@
-News in Version 0.10
+News in Version 0.22
 
-- New Output-Filter: Now the CVSOutputFilter can store the date to a CSV-File, 
-which can be used in many other applications. 
-- New: Command-Line-Switches: Use solarpowelog -c <file> to specify your configuration
-file.
-
+- The default setting for the CSVWriter "flush_file_buffer_immediatly" is now
+false, as this setting needs only be set in special circumstances and even might
+be less good performing. 
