--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,8 @@
-solarpowerlog (0.21-1) unstable; urgency=low
+solarpowerlog (0.21a-1) unstable; urgency=low
 
   * Worked on the debian integration, package now build fine using
-    pbuilder, is linitian warning free and hopefully will find a 
+    pbuilder, is linitian warning free and hopefully will find a
     heartly welcome on debian so ITP can be closed. (Closes: #652904)
-  * Implemented feedback from debian-mentors (IRC and mailing list)
-  * Updated watch file as upstream will use tar.gz tarballs in the 
-    future 
 
- -- Tobias Frost <tobi@coldtobi.de>  Tue, 27 Dec 2011 20:36:15 +0100
+ -- Tobias Frost <tobi@coldtobi.de>  Sun, 01 Jan 2012 19:41:30 +0100
+
