[DEBIAN] Changes to debian files
- changelog cleaned
- compat level set to 9
- using short debhelper style (cleans up pretty much debian/rules)
- allow parallel using DEB_BUILD_OPTIONS=parallel=<number>
- enable hardening
- implement suggested changes from debian-mentors mailling list.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,5 @@
 solarpowerlog (0.21a-1) unstable; urgency=low
 
-  * Worked on the debian integration, package now build fine using
-    pbuilder, is linitian warning free and hopefully will find a
-    heartly welcome on debian so ITP can be closed. (Closes: #652904)
+  * Initial upload, (Closes: #652904)
 
- -- Tobias Frost <tobi@coldtobi.de>  Sun, 01 Jan 2012 19:41:30 +0100
-
+ -- Tobias Frost <tobi@coldtobi.de>  Sat, 11 Feb 2012 10:29:51 +0100
