[MAN PAGE] Update, missed the first time

--- a/solarpowerlog.1
+++ b/solarpowerlog.1
@@ -26,7 +26,7 @@ The program trackd and logd data from photovoltaic inverters,
 collect power data and store them.
 
 .SH "OPTIONS"
-These programs follow the usual GNU command line syntax, with long
+The program follow the usual GNU command line syntax, with long
 options starting with two dashes (`\-').
 A summary of options is included below.
 
