--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 solarpowerlog (0.23-1) unstable; urgency=low
 
-  * Initial upload, (Closes: #652904)
+  * Initial upload (Closes: #652904)
 
- -- Tobias Frost <tobi@coldtobi.de>  Sat, 10 Mar 2012 21:41:10 +0100
+ -- Tobias Frost <tobi@coldtobi.de>  Tue, 13 Mar 2012 15:39:15 +0100
