--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-solarpowerlog (0.23-1) unstable; urgency=low
+solarpowerlog (0.23a-1) unstable; urgency=low
 
   * Initial upload (Closes: #652904)
 
- -- Tobias Frost <tobi@coldtobi.de>  Tue, 13 Mar 2012 15:39:15 +0100
+ -- Tobias Frost <tobi@coldtobi.de>  Wed, 14 Mar 2012 16:48:09 +0100
