Adding contributor section to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
-solarpowerlog is written by 
+solarpowerlog is written by
 
 Tobias Frost <tobi ät coldtobi.de>
+
+
+List of Contributors:
+E.A.Neonakis <eaneonakis ät freemail.gr>
