[Sputnik] Add support for Solarmax 10MT, patch provided by Markus Amsler

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Tobias Frost <tobi ät coldtobi.de>
 
 List of Contributors:
 E.A.Neonakis <eaneonakis ät freemail.gr>
+Markus Amsler <markus.amsler ät eigenstrom.ch>
