--- a/src/ctemplate/README
+++ b/src/ctemplate/README
@@ -1,7 +1,7 @@
 ctemplate   GPL         http://libctemplate.sourceforge.net
 Author: Author: Stephen C. Losen, University of Virginia
 License: GPL
-Used for templating the HTML o:tput
+Used for templating the HTML output
 Modifications by Tobias Frost:  
     Added C++ Wrapper to the header file.
     Emits smaller pages due filtering double-blanks 
