--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ solarpowerlog (0.24-1) experimental; urgency=low
 
   * New upstream release.
   * Targeting experimental during the freeze
+  * Missing b-d on libboost-date-time-dev
+  * Patch "fix-solarpowerlog.init" applied upstream
 
  -- Tobias Frost <tobi@coldtobi.de>  Sun, 17 Mar 2013 19:24:46 +0100
 
