Standards version 3.9.3: Add branch to Vcs-Git in d/control

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,13 +3,14 @@ solarpowerlog (0.24-1) unstable; urgency=low
   * New upstream release.
   * Missing b-d on libboost-date-time-dev
   * Patch "fix-solarpowerlog.init" applied upstream
-  * d/rules clean: remove some autoconf generated files.
+  * d/rules clean: remove some autoconf generated files
+  * Update to standard version 3.9.4: Add branch to Vcs-Git in d/control
 
  -- Tobias Frost <tobi@coldtobi.de>  Sun, 17 Mar 2013 19:24:46 +0100
 
 solarpowerlog (0.23a-2) unstable; urgency=low
 
-  * Fix "bashism in the init.d file (Closes: #690632)
+  * Fix "bashism in the init.d file" (Closes: #690632)
 
  -- Tobias Frost <tobi@coldtobi.de>  Tue, 16 Oct 2012 19:51:13 +0200
 
