--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-solarpowerlog (0.24-2) UNRELEASED; urgency=low
+solarpowerlog (0.24-2) unstable; urgency=low
 
   * Adding solarpowerlog.logrotate (cherry picked from upstream)
+  * Overriding linitian warning init.d-script-call-internal-API until
+    consensus is found on this topic.
 
- -- Tobias Frost <tobi@coldtobi.de>  Sun, 26 May 2013 18:09:04 +0200
+ -- Tobias Frost <tobi@coldtobi.de>  Sat, 08 Jun 2013 13:37:57 +0200
 
 solarpowerlog (0.24-1) unstable; urgency=low
 
