--- a/debian/changelog
+++ b/debian/changelog
@@ -2,10 +2,10 @@ solarpowerlog (0.24-2) unstable; urgency=low
 
   * Adding solarpowerlog.logrotate (cherry picked from upstream)
   * Overriding linitian warning init.d-script-call-internal-API until
-    consensus is found on this topic.
+    consensus is found on this topic
   * Do not install verbatim (L)GPL license texts
 
- -- Tobias Frost <tobi@coldtobi.de>  Mon, 27 May 2013 21:57:02 +0200
+ -- Tobias Frost <tobi@coldtobi.de>  Sat, 08 Jun 2013 15:04:46 +0200
 
 solarpowerlog (0.24-1) unstable; urgency=low
 
