--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ solarpowerlog (0.24-5) unstable; urgency=medium
   * New patch 02-dont-ovewrite-cppflags.patch to avoid
     stomping over CPPFLAGS in configure.ac
   * Update SV to 3.9.5, no changes required
+  * Update VCS-Browser to reflect sf.net change
 
- -- Tobias Frost <tobi@coldtobi.de>  Wed, 26 Mar 2014 10:18:51 +0100
+ -- Tobias Frost <tobi@coldtobi.de>  Wed, 26 Mar 2014 10:34:40 +0100
 
 solarpowerlog (0.24-4) unstable; urgency=low
 
