--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 solarpowerlog (0.24-6) UNRELEASED; urgency=medium
 
-  * Edit patch 02-dont-overwrite-cppflags.patch -- applied upstream in
-    repository
+  * Both patches have been applied upstream in the repository, editing dep3
+    header and renaming patches to have leading numbers.
 
  -- Tobias Frost <tobi@coldtobi.de>  Sat, 28 Jun 2014 09:55:15 +0200
 
