--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-solarpowerlog (0.24-6) UNRELEASED; urgency=medium
+solarpowerlog (0.24-6) unstable; urgency=medium
 
   * Both patches have been applied upstream in the repository, editing dep3
     header and renaming patches to have leading numbers.
   * Change B-D from liblog4cxx10-dev to liblog4cxx-dev
   * Add patch to fix libconfig1.5 ABI change
 
- -- Tobias Frost <tobi@coldtobi.de>  Sat, 28 Jun 2014 09:55:15 +0200
+ -- Tobias Frost <tobi@debian.org>  Wed, 05 Aug 2015 20:57:44 +0200
 
 solarpowerlog (0.24-5) unstable; urgency=medium
 
