--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solarpowerlog (0.24-9) UNRELEASED; urgency=medium
+
+  * Use secure copyright file specification URI.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 06:06:32 +0000
+
 solarpowerlog (0.24-8) unstable; urgency=medium
 
   * Make github repo the primary one and update d/control with its URL.
