--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ solarpowerlog (0.24-9) UNRELEASED; urgency=medium
 
   * Use secure copyright file specification URI.
   * Bump debhelper from old 11 to 12.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 06:06:32 +0000
 
