--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ solarpowerlog (0.24-9) UNRELEASED; urgency=medium
   * Use secure copyright file specification URI.
   * Bump debhelper from old 11 to 12.
   * Set debhelper-compat version in Build-Depends.
+  * Set upstream metadata fields: Archive, Repository.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 06:06:32 +0000
 
